--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -16,6 +16,5 @@ Tienda de Mario
 {{ end }}
 
 {{define "js"}}
-<script defer src="/static/web_components/wc-layout.js"></script>
-<script defer src="/static/web_components/wc-home.js"></script>
+<script defer src="{{WebComponentsFolder}}/wc-home.js"></script>
 {{ end }}
