--- a/templates/products/product-details.gohtml
+++ b/templates/products/product-details.gohtml
@@ -14,9 +14,8 @@
 {{ end }}
 
 {{define "js"}}
-<script defer src="/static/web_components/wc-layout.js"></script>
 <script
   defer
-  src="/static/web_components/wc-product-client-details.js"
+  src="{{WebComponentsFolder}}/wc-product-client-details.js"
 ></script>
 {{ end }}
