--- a/templates/blogs/blog-list.gohtml
+++ b/templates/blogs/blog-list.gohtml
@@ -1,15 +1,14 @@
-{{define "title"}}Blogs{{end}}
+{{define "title"}}Blogs{{ end }}
 
 {{define "content"}}
-  <script id="blogs_jsonld" type="application/ld+json">
-    {{.BLOGS_JSONLD}}
-  </script>
-  <wc-layout>
-    <wc-blog-list-page id="content-page"></wc-blog-list-page>
-  </wc-layout>
-{{end}}
+<script id="blogs_jsonld" type="application/ld+json">
+  {{.BLOGS_JSONLD}}
+</script>
+<wc-layout>
+  <wc-blog-list-page id="content-page"></wc-blog-list-page>
+</wc-layout>
+{{ end }}
 
 {{define "js"}}
-  <script defer src='/static/web_components/wc-layout.js'></script>
-  <script defer src='/static/web_components/wc-blog-list-page.js'></script>
-{{end}}
+<script defer src="{{WebComponentsFolder}}/wc-blog-list-page.js"></script>
+{{ end }}
