added localBusiness info, access to constants in template, get paymentinfo, etc

--- a/templates/blogs/blog-details.gohtml
+++ b/templates/blogs/blog-details.gohtml
@@ -10,5 +10,5 @@
 {{ end }}
 
 {{define "js"}}
-  <script defer src="{{WebComponentsFolder}}/wc-blog-details-page.js"></script>
+  <script defer src="{{Constants.WebComponentsFolder}}/wc-blog-details-page.js"></script>
 {{ end }}
