--- a/templates/blogs/blog-list.gohtml
+++ b/templates/blogs/blog-list.gohtml
@@ -10,5 +10,5 @@
 {{ end }}
 
 {{define "js"}}
-<script defer src="{{WebComponentsFolder}}/wc-blog-list-page.js"></script>
+<script defer src="{{Constants.WebComponentsFolder}}/wc-blog-list-page.js"></script>
 {{ end }}
