--- a/templates/products/product-list.gohtml
+++ b/templates/products/product-list.gohtml
@@ -1,6 +1,4 @@
-{{define "title"}}
-Products
-{{ end }}
+{{define "title"}}Products{{ end }}
 
 {{define "content"}}
 <script id="products_jsonld" type="application/ld+json">
@@ -12,5 +10,5 @@ Products
 {{ end }}
 
 {{define "js"}}
-<script defer src="{{WebComponentsFolder}}/wc-product-store-page.js"></script>
+<script defer src="{{Constants.WebComponentsFolder}}/wc-product-store-page.js"></script>
 {{ end }}
